tests/compile-fail/integration_suite__integration__anm_features__color_formats__bad_image.snap
---
source: tests/integration/anm_features.rs
expression: stderr
---
error: cannot transcode into unknown color format 8
  ┌─ <input>:7:17
  │
7 │     img_format: 8,
  │                 ^ unknown color format


